--- a/src/BolWallet/Pages/MenuPanel.razor
+++ b/src/BolWallet/Pages/MenuPanel.razor
@@ -3,7 +3,7 @@
 @inject IBolService bolService;
 
 <MudLayout>
-    <MudAppBar>
+    <MudAppBar Style="background-color:#0050FF">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
         <MudSpacer />
         <MudProgressCircular Indeterminate="true" Size="Size.Small" hidden="@idle" />
