Hide only the back button instead of the nav bar

--- a/src/BolWallet/Views/HomePage.xaml
+++ b/src/BolWallet/Views/HomePage.xaml
@@ -6,7 +6,7 @@
     xmlns:pages="clr-namespace:BolWallet.Pages"
     Title="Home"
     BackgroundColor="{DynamicResource SecondaryColor}"
-    NavigationPage.HasNavigationBar="false">
+    NavigationPage.HasBackButton="false">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
