--- a/src/BolWallet/Pages/CreateCodenameCompanyPage.razor
+++ b/src/BolWallet/Pages/CreateCodenameCompanyPage.razor
@@ -35,7 +35,7 @@
         <MudItem xs="12" sm="12" md="12">
             <MudDatePicker Label="Incorporation Date(yyyy-MM-dd)" Editable="true" Date="@IncorporationDate" Variant="MudBlazor.Variant.Outlined"
                            Margin="@Margin.Dense"
-                           HelperText="VAT must contains at least 5 characters"
+                           HelperText="VAT must contain at least 5 characters"
                            MinDate="new DateTime(1900, 1, 1)" MaxDate="DateTime.Today" Immediate="true"
                            Error="!CompanyCodenameForm.IncorporationDate.IsReady" ErrorText="@CompanyCodenameForm.IncorporationDate.ErrorMessage"
                            DateChanged="@OnDateChanged" Mask="@(new DateMask("0000-00-00"))" DateFormat="@Constants.BirthDateFormat"
