Change toolbar item to show the logout icon

--- a/src/BolWallet/Views/MainWithAccountPage.xaml
+++ b/src/BolWallet/Views/MainWithAccountPage.xaml
@@ -18,6 +18,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem 
             Text="Close Wallet"
+            IconImageSource="logout"
             Order="Primary"
             Priority="0" 
             Command="{Binding CloseWalletCommand}"/>
