--- a/src/BolWallet/Views/MainPage.xaml
+++ b/src/BolWallet/Views/MainPage.xaml
@@ -2,12 +2,20 @@
     x:Class="BolWallet.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MainViewModel"
     xmlns:controls1="clr-namespace:BolWallet.Controls"
     BackgroundColor="{DynamicResource SecondaryColor}"
     Title="{Binding Title}"
     x:Name="this">
+    
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <ScrollView>
         <Grid
             Padding="{OnPlatform iOS='30,60,30,30',
@@ -28,7 +36,8 @@
                 HorizontalOptions="Center"
                 SemanticProperties.Description="{Binding WelcomeMessage}"
                 Source="bol_logo.png"
-                WidthRequest="250">
+                WidthRequest="250"
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding SwitchNetworkCommand}"
                                           NumberOfTapsRequired="2" />
@@ -42,7 +51,8 @@
                 HorizontalOptions="Center"
                 WidthRequest="200"
                 Text="New Individual Wallet" 
-                IsVisible="{OnPlatform iOS=false, Default=true}" />
+                IsVisible="{OnPlatform iOS=false, Default=true}"
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}" />
 
             <Button
                 Grid.Row="3"
@@ -51,29 +61,30 @@
                 HorizontalOptions="Center"
                 WidthRequest="200"
                 Text="New Company Wallet" 
-                IsVisible="{OnPlatform iOS=false, Default=true}" />
+                IsVisible="{OnPlatform iOS=false, Default=true}"
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}" />
+            
             <Button
-             Grid.Row="4"
-             Command="{Binding ImportYourWalletCommand}"
-             FontAttributes="Bold"
-             HorizontalOptions="Center"
-             WidthRequest="200"
-             Text="Import Existing Wallet" />
+                Grid.Row="4"
+                Command="{Binding ImportYourWalletCommand}"
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                WidthRequest="200"
+                Text="Import Existing Wallet"
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}" />
             
             <ActivityIndicator Grid.Row="5"
-                               Grid.RowSpan="6"
                                HorizontalOptions="CenterAndExpand"
-                               VerticalOptions="EndAndExpand"
                                IsRunning="True"
                                IsVisible="{Binding IsLoading}"
                                Color="Coral"
                                HeightRequest="200"
-                               WidthRequest="200"/>
+                               WidthRequest="200" />
+            
             <Label Grid.Row="6"
                    Text="Unlocking your wallet... Please wait."
                    IsVisible="{Binding IsLoading}"
                    HorizontalOptions="CenterAndExpand"
-                   VerticalOptions="EndAndExpand"
                    TextColor="Blue"
                    FontSize="Large"/>
         </Grid>
