Change wallet creation info messages

--- a/src/BolWallet/Pages/WalletCreationInfo.razor
+++ b/src/BolWallet/Pages/WalletCreationInfo.razor
@@ -30,10 +30,10 @@
                     <MudCheckBox @bind-Value="IsCitizenshipChecked" Label="Submit all citizenships you hold." />
                 </MudListItem>
                 <MudListItem>
-                    <MudCheckBox @bind-Value="IsNameFilledCorrectly" Label="Provide your full personal details exactly as they appear in your passport or ID (including name, birthdate, etc.)." />
+                    <MudCheckBox @bind-Value="IsNameFilledCorrectly" Label="Provide your details exactly as they appear in your passport or ID (including name, birthdate, etc.)." />
                 </MudListItem>
                 <MudListItem>
-                    <MudCheckBox @bind-Value="IsNINCorrect" Label="Provide the correct National Identification Number (NIN) for your country." />
+                    <MudCheckBox @bind-Value="IsNINCorrect" Label="Use the correct National Identification Number (NIN) for your country. (Submit only last 5 digits)" />
                 </MudListItem>
             </MudList>
 
